#139 Modify Cif2Petrify test.